<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#ffffe4">


    <EditText
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        android:fontFamily="@font/open_sans"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/rememberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:fontFamily="@font/open_sans"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/logPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttons"
        android:fontFamily="@font/open_sans_bold"
        android:text="LOG IN"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/openRegActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="If you don't have an account, click here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="268dp"
        android:layout_height="51dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/open_sans"
        android:text="Remember Me"
        app:layout_constraintBottom_toTopOf="@+id/loginProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFacebook"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="19dp"
        android:background="@color/fb_blue"
        android:drawableLeft="@drawable/ic_baseline_facebook_24"
        android:fontFamily="@font/open_sans_bold"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="sign up with Facebook"
        android:textAllCaps="true"
        android:textColor="@color/fb_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/openRegActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="LOG IN"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/logEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/open_sans"
        android:text="Proudly created and curated by Wiktor Poznachowski"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openRegActivity"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>