...
            android:fontFamily="@font/open_sans"
            android:text="@{food.type}"
            android:textSize="12sp"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/open_sans_bold"
            android:onClick="@{()-> foodInterface.addItem(food)}"
            android:text="ADD TO CART" />


    </LinearLayout>
</layout>

