<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffe4">

    <LinearLayout
        android:orientation="vertical"
        tools:context=".views.CartFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/food_item"
            android:padding="16dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/orderTotalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="Total: $ 26"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <Button
            android:id="@+id/placeOrderButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/open_sans_bold"



            android:text="ORDER"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>