<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout"
        android:title="Logout"/>

    <item
        android:id="@+id/info"
        android:title="Info"/>

    <item
        android:id="@+id/contact"
        android:title="Contact us"/>

    <item android:id="@+id/settingsActivity"
        android:title="Settings"
        android:icon="@drawable/profile"
        app:showAsAction="always"
        />
</menu>

